objects/Survey__c/fields/ICC_Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>ICC_Subscriber_ID__c</fullName>
    <formula>Account__r.Customer_Detail__r.ICC_Subscriber_ID__c</formula>
    <label>ICC Subscriber ID</label>
    <type>Text</type>
</CustomField>