objects/Survey__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>