objects/Survey__c/fields/Sent_Status__c.field-meta.xml
<CustomField>
    <fullName>Sent_Status__c</fullName>
    <label>Sent Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>