objects/Survey__c/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Started</label>
    <type>Checkbox</type>
</CustomField>