objects/Survey__c/listViews/Allstream_Installation_Survey_View.listView-meta.xml
<ListView>
    <fullName>Allstream_Installation_Survey_View</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Surveyed_Contact__c</columns>
    <columns>Completed__c</columns>
    <columns>Sent_Date__c</columns>
    <columns>Sent_Status__c</columns>
    <columns>Started__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Allstream Installation Survey</value>
    </filters>
    <label>Allstream Installation Survey View</label>
</ListView>